--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,8 @@
             android:fontFamily="@font/roboto_medium"
             android:gravity="center"
             android:text="@string/welcomeMsgText"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textSize="20sp"
+            android:textColor="@color/Black"
             android:textStyle="bold|italic" />
 
     </LinearLayout>
