--- a/app/src/main/res/layout/activity_illness.xml
+++ b/app/src/main/res/layout/activity_illness.xml
@@ -8,9 +8,13 @@
     tools:context=".IllnessActivity"
     android:weightSum="10">
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/illnessRecycleV"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="9" />
+        android:layout_weight="9"
+        tools:listitem="@layout/item_message_send"
+        tools:itemCount="5"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +23,8 @@
         android:weightSum="10"
         android:orientation="horizontal"
         android:layout_margin="5dp">
-        <AutoCompleteTextView
+        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+            android:id="@+id/editTextIll"
             android:layout_width="0dp"
             android:layout_weight="10"
             android:layout_height="match_parent"
@@ -30,6 +35,7 @@
             tools:ignore="NestedWeights" />
 
         <Button
+            android:id="@+id/sendButtonIll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/send"
